apps/qbittorrent/ingress-qbittorrent-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-tailscale
  namespace: media
  annotations:
    tailscale.com/tags: "tag:k8s-operator"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: qbittorrent
      port:
        number: 8080
  tls:
    - hosts:
        - qbittorrent
